fix: remove unnecessary files

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -83,5 +83,5 @@
 	<link href="https://fonts.googleapis.com/css?family=PT+Serif:400,700|Lato:300,400,700&display=swap" rel="stylesheet">
 	<!-- Styles -->
 	<link rel="stylesheet" href="{{ "{{site.baseurl}}/assets/css/main.css" | prepend: site.baseurl }}">
-  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 </head>
