--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -28,7 +28,7 @@ layout: default
     <section class="contact">
       <h3 class="contact-title">Contato</h3>
       <ul>
-        <div class="contact-email"> <b>Coordenadora do Projeto na UnB:</b> {{site.social-email}}</div>
+        <h3 class="contact-email"> <b>Coordenadora do Projeto na UnB:</b> {{site.social-email}}</h3>
       </ul>
     </section> <!-- End Section Contact -->
     <div class="copyright">
