--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,7 +30,7 @@
   <meta content="{{ site.url }}/about/" property="article:author">
   {% endif %}
   {% if page.img %}
-  <meta content="{{ site.url }}{{ site.baseurl }}/assets/img/{{ page.img }}"
+  <meta content="{{page.img}}"
     property="og:image">
   {% else %}
   <meta
@@ -66,7 +66,7 @@
   {% endif %}
   {% if page.img %}
   <meta name="twitter:image:src"
-    content="{{ site.url }}{{ site.baseurl }}/assets/img/{{ page.img }}">
+    content=" {{ page.img }}">
   {% else %}
   <meta name="twitter:image:src"
     content="{{ site.url }}{{ site.baseurl }}/assets/img/{{ site.author-img }}">
